--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,9 +1,15 @@
 div{
     background-color: crimson;
     margin: 10px;
+     font-style: inherit;
     
 }
 div{
     padding-inline: 20px;
 
+}
+div{
+    border: 10px solid rgba(245, 36, 234, 0.651);
+    margin-bottom: 20px;
+    
 }
